--- a/FE_BanAccLQ/package.json
+++ b/FE_BanAccLQ/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -28,5 +29,4 @@
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
   }
-
 }
