--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.14.1",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
