--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "chart.js": "^4.4.7",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.17.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.14.1",
     "react-router-dom": "^7.1.1"
